--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -19,7 +19,7 @@ jobs:
           tools: composer:v2
 
       - name: Set up Composer cache
-        run: echo "COMPOSER_CACHE_DIR=$(composer config cachedir)" >> $GITHUB_ENV
+        run: echo "COMPOSER_CACHE_DIR=$(composer config cache-dir)" >> $GITHUB_ENV
 
       - name: Caching dependencies
         uses: actions/cache@v4
