--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,6 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: symfony_docker_ci_cd
-          MYSQL_USER: user
-          MYSQL_PASSWORD: password
         ports:
           - 3306:3306
         options: >-
@@ -73,5 +71,5 @@ jobs:
         run: composer app:tests
         env:
             APP_ENV: test
-            DATABASE_URL: "mysql://user:password@127.0.0.1:3306/symfony_docker_ci_cd_test?serverVersion=8.0.32&charset=utf8mb4"     
+            DATABASE_URL: "mysql://root:root@127.0.0.1:3306/symfony_ci_cd?serverVersion=8.0.32&charset=utf8mb4"     
 
