--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,8 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
+
+###> doctrine/doctrine-bundle ###
+# Utilisation de l'utilisateur root pour les tests locaux avec permissions de création de DB
+DATABASE_URL="mysql://root:root@127.0.0.1:3306/symfony_ci_cd_test?serverVersion=8.0.32&charset=utf8mb4"
+###< doctrine/doctrine-bundle ###
