--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,11 +3,12 @@ name: Code Testing Workflow
 on: [push, pull_request]
 
 jobs:
-  audit: 
-    uses: .github/workflows/audit.yml
+  audit:
+    uses: ./.github/workflows/audit.yml@main
+
   quality:
     needs: audit
-    uses: .github/workflows/quality.yml
+    uses: ./.github/workflows/quality.yml@main
 
   code-testing:
     name: Code Testing
