--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,11 +4,11 @@ on: [push, pull_request]
 
 jobs:
   audit:
-    uses: ./.github/workflows/audit.yml@main
+    uses: ./.github/workflows/audit.yml
 
   quality:
     needs: audit
-    uses: ./.github/workflows/quality.yml@main
+    uses: ./.github/workflows/quality.yml
 
   code-testing:
     name: Code Testing
