--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,16 @@
 name: Code Testing Workflow
 
-on: [push, pull_request]
+#on: [push, pull_request]
+
+on: 
+  workflow_call: 
+  push: 
+    branches-ignore:
+      - production
+  pull_request:
+    branches-ignore:
+      - production
+
 
 jobs:
   code-testing:
