--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,5 @@
 name: Deploy to Production
+
 on:
   push:
     branches:
@@ -6,14 +7,18 @@ on:
 
 jobs:
   audit:
-    uses: .github/workflows/audit.yml
+    uses: ./.github/workflows/audit.yml@production
+
   quality:
-    uses: .github/workflows/quality.yml
+    needs: audit
+    uses: ./.github/workflows/quality.yml@production
+
   tests:
-    needs: ["audit", "quality"]
-    uses: .github/workflows/test.yml
+    needs: [quality]
+    uses: ./.github/workflows/test.yml@production
+
   deploy:
-    needs: ["tests"]
+    needs: tests
     runs-on: ubuntu-latest
     steps:
       - name: Execute ssh actions
