--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -1,10 +1,6 @@
 name: Security Audit Workflow
 
-#on: [push, pull_request]
-
-on:
-  workflow_call:
-
+on: [push, pull_request]
 
 jobs:
   security-audit:
