--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,6 @@
 name: Code Testing Workflow
 
-#on: [push, pull_request]
-
-on:
-  workflow_call:
-
+on: [push, pull_request]
 
 jobs:
   code-testing:
