--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,4 @@
 name: Deploy to Production
-
 on:
   push:
     branches:
@@ -7,18 +6,14 @@ on:
 
 jobs:
   audit:
-    uses: ./.github/workflows/audit.yml@production
-
+    uses: .github/workflows/audit.yml
   quality:
-    needs: audit
-    uses: ./.github/workflows/quality.yml@production
-
+    uses: .github/workflows/quality.yml
   tests:
-    needs: [quality]
-    uses: ./.github/workflows/test.yml@production
-
+    needs: ["audit", "quality"]
+    uses: .github/workflows/test.yml
   deploy:
-    needs: tests
+    needs: ["tests"]
     runs-on: ubuntu-latest
     steps:
       - name: Execute ssh actions
