--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -1,50 +1,39 @@
-name: Security Audit Workflow
+name: Security Audit
 
-on: [push, pull_request]
+on: [push, pull_request, workflow_call]
 
 jobs:
   security-audit:
     name: Security Audit
     runs-on: ubuntu-latest
-    continue-on-error: false
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up PHP
-        uses: shivammathur/setup-php@v2
+      - uses: shivammathur/setup-php@v2
         with:
           php-version: "8.3"
           tools: composer:v2
 
-      - name: Set up Composer cache
-        run: echo "COMPOSER_CACHE_DIR=$(composer config cache-dir)" >> $GITHUB_ENV
+      - run: echo "COMPOSER_CACHE_DIR=$(composer config cache-dir)" >> $GITHUB_ENV
 
-      - name: Caching dependencies
-        uses: actions/cache@v4
+      - uses: actions/cache@v4
         with:
           path: ${{ env.COMPOSER_CACHE_DIR }}
           key: php8.3-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            php8.3-composer-
+          restore-keys: php8.3-composer-
 
-      - name: Install dependencies
-        run: composer install --no-interaction --prefer-dist --optimize-autoloader
+      - run: composer install --no-interaction --prefer-dist --optimize-autoloader
 
-      - name: Run Composer security audit
-        run: |
+      - run: |
           composer audit \
             --no-dev \
             --abandoned=report \
             --ignore-severity=low \
             --format=json \
-            --no-ansi \
-            > /tmp/security-audit.json
+            --no-ansi > /tmp/security-audit.json
 
-
-      - name: Upload security audit report
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         if: always()
         with:
           name: security-audit-${{ github.run_id }}
