--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,18 @@
 name: Deploy to Production
+
 on:
-  push:
-    branches:
-      - production
+  workflow_run:
+    workflows: ["Code Testing"]
+    types:
+      - completed
 
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' && github.ref == 'refs/heads/production' }}
     runs-on: ubuntu-latest
+
     steps:
-      - name: Execute ssh actions
+      - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.SSH_HOST }}
