--- a/composer.json
+++ b/composer.json
@@ -87,7 +87,7 @@
             "@auto-scripts"
         ],
         "app:code-quality": [
-            "./vendor/bin/ecs check",
+            "./vendor/bin/ecs --fix",
             "bin/console lint:yaml config --parse-tags",
             "bin/console lint:twig templates",
             "bin/console lint:container",
