--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name izylearning.fr www.izylearning.fr;
     root /var/www/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
