--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -101,9 +101,9 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            git pull origin production
-            composer install --no-dev --optimize-autoloader
-            php bin/console doctrine:database:create --if-not-exists
-            php bin/console doctrine:migrations:migrate --no-interaction --allow-no-migration
-            php bin/console asset-map:compile
-            php bin/console cache:clear --env=prod
+            docker exec -u www-data php git pull origin production
+            docker exec -u www-data php composer install --no-dev --optimize-autoloader
+            docker exec -u www-data php php bin/console doctrine:database:create --if-not-exists
+            docker exec -u www-data php php bin/console doctrine:migrations:migrate --no-interaction --allow-no-migration
+            docker exec -u www-data php php bin/console asset-map:compile
+            docker exec -u www-data php php bin/console cache:clear --env=prod
