--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -93,17 +93,34 @@ jobs:
     needs: tests
     if: ${{ needs.tests.result == 'success' && github.ref == 'refs/heads/production' }}
     steps:
-      - name: Deploy via SSH
-        uses: appleboy/ssh-action@v1.2.0
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          port: ${{ secrets.SSH_PORT }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            docker exec -u www-data symfony-docker-ci-cd_php_1 git pull origin production
-            docker exec -u www-data symfony-docker-ci-cd_php_1 composer install --no-dev --optimize-autoloader
-            docker exec -u www-data symfony-docker-ci-cd_php_1 php bin/console doctrine:database:create --if-not-exists
-            docker exec -u www-data symfony-docker-ci-cd_php_1 php bin/console doctrine:migrations:migrate --no-interaction --allow-no-migration
-            docker exec -u www-data symfony-docker-ci-cd_php_1 php bin/console asset-map:compile
-            docker exec -u www-data symfony-docker-ci-cd_php_1 php bin/console cache:clear --env=prod
+    - name: Deploy via SSH
+      uses: appleboy/ssh-action@v1.2.0
+      with:
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USERNAME }}
+        port: ${{ secrets.SSH_PORT }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        script: |
+          # Autoriser le répertoire Git (évite "dubious ownership")
+          docker exec -u www-data symfony-docker-ci-cd_php_1 git config --global --add safe.directory /var/www
+
+          # Mettre à jour le code
+          docker exec -u www-data symfony-docker-ci-cd_php_1 git pull origin production
+
+          # Nettoyer vendor et lock file pour éviter les conflits de suppression
+          docker exec -u www-data symfony-docker-ci-cd_php_1 rm -rf vendor composer.lock
+
+          # Réinstaller proprement les dépendances
+          docker exec -u www-data symfony-docker-ci-cd_php_1 composer install --no-dev --optimize-autoloader
+
+          # Base de données
+          docker exec -u www-data symfony-docker-ci-cd_php_1 php bin/console doctrine:database:create --if-not-exists
+          docker exec -u www-data symfony-docker-ci-cd_php_1 php bin/console doctrine:migrations:migrate --no-interaction --allow-no-migration
+
+          # Compilation des assets
+          docker exec -u www-data symfony-docker-ci-cd_php_1 php bin/console asset-map:compile
+
+          # Nettoyage du cache
+          docker exec -u www-data symfony-docker-ci-cd_php_1 php bin/console cache:clear --env=prod
+
+
