--- a/compose.yaml
+++ b/compose.yaml
@@ -9,6 +9,10 @@ services:
     depends_on:
       - database
     restart: unless-stopped
+    environment:
+      - APP_ENV=prod
+      - APP_DEBUG=0
+
 
 
   nginx:
