--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,6 +15,9 @@ jobs:
   audit:
     name: Audit
     runs-on: ubuntu-latest
+    env:
+      APP_ENV: test
+      APP_DEBUG: 0
     steps:
       - uses: actions/checkout@v4
       - uses: shivammathur/setup-php@v2
@@ -38,6 +41,9 @@ jobs:
   quality:
     name: Code Quality
     runs-on: ubuntu-latest
+    env:
+      APP_ENV: test
+      APP_DEBUG: 0
     steps:
       - uses: actions/checkout@v4
       - uses: shivammathur/setup-php@v2
@@ -55,6 +61,10 @@ jobs:
   tests:
     name: Tests
     runs-on: ubuntu-latest
+    env:
+      APP_ENV: test
+      APP_DEBUG: 0
+
     needs: [audit, quality]
     if: ${{ always() && needs.audit.result == 'success' && needs.quality.result == 'success' }}
     services:
@@ -90,6 +100,9 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    env:
+      APP_ENV: prod
+      APP_DEBUG: 0
     needs: tests
     if: ${{ needs.tests.result == 'success' && github.ref == 'refs/heads/production' }}
     steps:
