--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -123,7 +123,26 @@ jobs:
           # 🔧 Corriger les permissions pour éviter les erreurs d'accès
           docker exec symfony-docker-ci-cd_php_1 chown -R www-data:www-data /var/www
 
-          # Exécuter le script de déploiement complet
-          docker exec -u www-data symfony-docker-ci-cd_php_1 chmod +x /var/www/deploy-complete.sh
-          docker exec symfony-docker-ci-cd_php_1 /var/www/deploy-complete.sh
+          # Nettoyer vendor et lock file pour éviter les conflits de suppression
+          docker exec -u www-data symfony-docker-ci-cd_php_1 rm -rf vendor composer.lock
+
+          # Créer .env.local pour forcer l'environnement prod
+          docker exec -u www-data symfony-docker-ci-cd_php_1 bash -c 'echo "APP_ENV=prod" > .env.local && echo "APP_DEBUG=0" >> .env.local'
+
+          # Réinstaller proprement les dépendances sans auto-scripts
+          docker exec -u www-data symfony-docker-ci-cd_php_1 composer install --no-dev --optimize-autoloader --no-scripts
+
+          # Base de données
+          docker exec -u www-data symfony-docker-ci-cd_php_1 bash -c 'APP_ENV=prod php bin/console doctrine:database:create --if-not-exists'
+          docker exec -u www-data symfony-docker-ci-cd_php_1 bash -c 'APP_ENV=prod php bin/console doctrine:migrations:migrate --no-interaction --allow-no-migration'
+
+          # Compilation des assets
+          docker exec -u www-data symfony-docker-ci-cd_php_1 bash -c 'APP_ENV=prod php bin/console asset-map:compile'
+
+          # Installation des assets
+          docker exec -u www-data symfony-docker-ci-cd_php_1 bash -c 'APP_ENV=prod php bin/console assets:install --symlink --relative'
+
+          # Nettoyage du cache
+          docker exec -u www-data symfony-docker-ci-cd_php_1 bash -c 'APP_ENV=prod php bin/console cache:clear'
+          docker exec -u www-data symfony-docker-ci-cd_php_1 bash -c 'APP_ENV=prod php bin/console cache:warmup'
 
