--- a/.env
+++ b/.env
@@ -15,16 +15,34 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
+# Environnement par défaut (sera surchargé par .env.local)
 APP_ENV=dev
 APP_SECRET=ThisTokenIsNotSoSecretChangeIt
 ###< symfony/framework-bundle ###
+
+###> docker/database ###
+# Configuration Docker pour le développement local
+MYSQL_ROOT_PASSWORD=root
+MYSQL_DATABASE=symfony_docker_ci_cd
+MYSQL_USER=user
+MYSQL_PASSWORD=password
+MYSQL_PORT=3307
+###< docker/database ###
+
+###> docker/services ###
+# Ports des services Docker
+NGINX_PORT=80
+PHPMYADMIN_PORT=8080
+USER_ID=1000
+GROUP_ID=1000
+###< docker/services ###
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
-DATABASE_URL="mysql://user:password@database:3306/symfony_docker_ci_cd??serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://user:password@database:3306/symfony_docker_ci_cd?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
