--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,32 +10,33 @@ on:
       - completed
     branches:
       - production
-
 jobs:
-  #  check-ci:
-  #    name: Check CI Status
-  #    runs-on: ubuntu-latest
-  #    if: ${{ github.event.workflow_run.conclusion == 'success' || github.ref == 'refs/heads/production' }}
-  #    steps:
-  #      - name: CI Status Check
-  #        run: |
-  #          if [ "${{ github.event_name }}" = "workflow_run" ]; then
-  #           echo "✅ CI Pipeline completed successfully"
-  #          else
-  #            echo "🔄 Direct push to production branch"
-  #          fi  
   deploy:
     name: Deploy to Production
     runs-on: ubuntu-latest
-    # needs: check-ci
     env:
       APP_ENV: prod
       APP_DEBUG: 0
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Vérifier la présence de deploy.sh
         run: ls -la
-        
+
+      - name: Check SSH secrets
+        id: check-secrets
+        run: |
+          if [ -z "${{ secrets.SSH_HOST }}" ] || [ -z "${{ secrets.SSH_USERNAME }}" ] || [ -z "${{ secrets.SSH_PRIVATE_KEY }}" ]; then
+            echo "missing=true" >> $GITHUB_OUTPUT
+            echo "❌ SSH secrets are not configurés"
+          else
+            echo "missing=false" >> $GITHUB_OUTPUT
+            echo "✅ SSH secrets configurés"
+          fi
+
       - name: Copier deploy.sh sur le serveur
+        if: steps.check-secrets.outputs.missing == 'false'
         uses: appleboy/scp-action@v0.1.3
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -45,23 +46,7 @@ jobs:
           source: "./deploy.sh"
           target: "/monapp/symfony-docker-ci-cd/deploy.sh"
 
-      - name: Check SSH secrets
-        id: check-secrets
-        run: |
-          if [ -z "${{ secrets.SSH_HOST }}" ] || [ -z "${{ secrets.SSH_USERNAME }}" ] || [ -z "${{ secrets.SSH_PRIVATE_KEY }}" ]; then
-            echo "missing=true" >> $GITHUB_OUTPUT
-            echo "❌ SSH secrets are not configured"
-            echo "Please configure the following secrets in repository settings:"
-            echo "- SSH_HOST"
-            echo "- SSH_USERNAME"
-            echo "- SSH_PORT (optional, defaults to 22)"
-            echo "- SSH_PRIVATE_KEY"
-          else
-            echo "missing=false" >> $GITHUB_OUTPUT
-            echo "✅ SSH secrets are configured"
-          fi
-
-      - name: Deploy to Production Server
+      - name: Déployer sur le serveur
         if: steps.check-secrets.outputs.missing == 'false'
         uses: appleboy/ssh-action@v1.2.0
         with:
@@ -73,11 +58,10 @@ jobs:
           command_timeout: 60s
           script: |
             set -e
-            cd //monapp/symfony-docker-ci-cd
+            cd /monapp/symfony-docker-ci-cd
             echo "On est dans $(pwd)"
             echo "Liste des fichiers:"
             ls -la
-            echo "Test simple terminé"
             chmod +x deploy.sh
             ./deploy.sh
-            echo "Déploiement terminé avec succès"
+            echo "✅ Déploiement terminé avec succès"
