--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "./deploy.sh"
-          target: "/monapp/symfony-docker-ci-cd/deploy.sh"
+          target: "/monapp/symfony-docker-ci-cd/"
 
       - name: Déployer sur le serveur
         if: steps.check-secrets.outputs.missing == 'false'
