--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,47 +23,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Vérifier la présence de deploy.sh
-        run: ls -la
-
       - name: Check SSH secrets
         id: check-secrets
         run: |
           if [ -z "${{ secrets.SSH_HOST }}" ] || [ -z "${{ secrets.SSH_USERNAME }}" ] || [ -z "${{ secrets.SSH_PRIVATE_KEY }}" ]; then
             echo "missing=true" >> $GITHUB_OUTPUT
-            echo "❌ SSH secrets are not configurés"
+            echo "❌ SSH secrets are not configured"
           else
             echo "missing=false" >> $GITHUB_OUTPUT
-            echo "✅ SSH secrets configurés"
+            echo "✅ SSH secrets configured"
           fi
 
-      - name: Supprimer ancien dossier deploy.sh s'il existe
-        if: steps.check-secrets.outputs.missing == 'false'
-        uses: appleboy/ssh-action@v1.2.0
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          port: ${{ secrets.SSH_PORT }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            if [ -d /monapp/symfony-docker-ci-cd/deploy.sh ]; then
-              echo "🧹 Suppression du dossier erroné deploy.sh/"
-              rm -rf /monapp/symfony-docker-ci-cd/deploy.sh
-            fi
-
-      - name: Copier deploy.sh sur le serveur
-        if: steps.check-secrets.outputs.missing == 'false'
-        uses: appleboy/scp-action@v0.1.3
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          port: ${{ secrets.SSH_PORT }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "./deploy.sh"
-          target: "/monapp/symfony-docker-ci-cd/"
-          overwrite: true
-
-      - name: Déployer sur le serveur
+      - name: Déployer sur le serveur (sans deploy.sh)
         if: steps.check-secrets.outputs.missing == 'false'
         uses: appleboy/ssh-action@v1.2.0
         with:
@@ -72,13 +43,30 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           timeout: 300s
-          command_timeout: 60s
+          command_timeout: 120s
           script: |
             set -e
+
+            echo "📁 On est dans /monapp/symfony-docker-ci-cd"
             cd /monapp/symfony-docker-ci-cd
-            echo "📁 On est dans $(pwd)"
-            echo "📄 Liste des fichiers:"
-            ls -la
-            chmod +x deploy.sh
-            ./deploy.sh
+
+            echo "⚙️ Configuration git safe.directory"
+            git config --global --add safe.directory /monapp/symfony-docker-ci-cd
+
+            echo "⬇️ Récupération et reset du code à la branche production"
+            git fetch origin production
+            git reset --hard origin/production
+
+            echo "📦 Installation / Mise à jour des dépendances (exemple avec composer)"
+            composer install --no-dev --optimize-autoloader
+
+            echo "🧹 Nettoyage cache"
+            php bin/console cache:clear --env=prod
+
+            echo "🔧 Migration base de données (si besoin)"
+            php bin/console doctrine:migrations:migrate --no-interaction --env=prod
+
+            echo "🚀 Redémarrage des services docker"
+            docker-compose -f compose.yaml restart php nginx
+
             echo "✅ Déploiement terminé avec succès"
